# mega-agent-v2

./: .env.example  .gitignore  AWS_INTEGRATION_COMPLETE.md  CAPABILITIES.md  ELEVENLABS_SETUP.md  MCP_SERVER_SETUP.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PLAN.md  RALPH_WIGGUM_INSTALLED.md  README.md  REFACTOR_COMPLETE.md  SDK_NATIVE_ARCHITECTURE.md  SDK_REFACTOR_SUCCESS.md  SDK_SKILLS_COMPLETE.md  SKILLS_ARCHITECTURE_PLAN.md  SUPERPOWERS_AGENT_INTEGRATION.md  SUPERPOWERS_INSTALLED.md  SUPERPOWERS_INTEGRATION_COMPLETE.md  agents.py  main.py  mcp-server-v2.service  mcp_server_v2.py  nova_sonic_service.py  pyproject.toml  pytest.ini  requirements.txt  test_basic.py  test_sdk_agents.py  test_sdk_minimal.py  test_slack_dm.py  test_voice_agent.py  voice_bridge.py  voice_gateway.py  voice_query_runner.py  voice_service.py
config/: model-routing.json
data/: context.json  exposed_tools.json
docs/: CLAUDE_CODE_PLUGINS_INTEGRATION_PLAN.md  EHNW_CICD_DEPLOYMENT_COMPLETE.md  EHNW_CICD_IMPLEMENTATION_PLAN.md  EHNW_STAGING_IMPLEMENTATION_COMPLETE.md  EHNW_STAGING_UNIVERSAL_LINKS_PLAN.md  EHNW_UNIVERSAL_LINKS_FINAL_CHECKLIST.md  EHNW_UNIVERSAL_LINKS_IMPLEMENTATION_COMPLETE.md  EHNW_UNIVERSAL_LINKS_PLAN.md  EHNW_UNIVERSAL_LINKS_REVIEW.md  EHNW_UNIVERSAL_LINKS_SUMMARY.md  MIGRATION_PLAN_SKILLS_CENTRIC.md  MIGRATION_STATUS.md  VOICE_BRIDGE_ARCHITECTURE_PLAN.md  WEEK1_PROGRESS.md
integrations/: __init__.py  appstore_client.py  aws_client.py  clickup_client.py  firebase_client.py  gmail_client.py  google_ads_client.py  google_calendar_client.py  google_tasks_client.py  grok_voice_client.py  linear_client.py  slack_client.py  supabase_client.py  wordpress_client.py
mcp/: __init__.py  auth.py  prompts.py  protocol.py  security.py
nginx/: av.conf
nova_sonic/: __init__.py  audio_bridge.py  claude_bridge.py  client.py  config.py  conversation_manager.py  event_handler.py  mcp_executor.py  (+1 more)
(+114 files in other folders)
